syntax = "proto2";

package keras_classification.protos;

import "rastervision/protos/keras_classification/optimizer.proto";

message Trainer {
    message LRScheduleItem {
        required int32 epoch = 1;
        required float lr = 2;
    }

    message Options {
        required string training_data_dir = 1;
        required string validation_data_dir = 2;
        required int32 nb_epochs = 4;
        repeated LRScheduleItem lr_schedule = 10;
        required int32 batch_size = 5;
        required int32 input_size = 6;
        required string output_dir = 7;
        repeated string class_names = 8;
        required bool short_epoch = 9 [default=false];
        required bool debug = 11;
        // Only save model if the validation score is the best so far.
        required bool save_best = 12 [default=true];
    }

    required Optimizer optimizer = 1;
    required Options options = 2;
}
